--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     background-image: url("img/bg.jpg");
     background-size: cover;
     font-family: 'Glegoo', serif;
-    color: azure;
+    color: black;
     
 }
 
@@ -22,11 +22,23 @@ body{
     padding: 20px;
     height: 270px;
     width: 300px;
-    background-color: burlywood;
+    background-color: #FFFDE4;
     border-radius: 20px;
+    box-shadow: 5px 5px 15px 5px #000000;
 }
 
 h1{
-    border-bottom: black solid 2px;
     margin-bottom: 10px;
+}
+#rekening > li{
+    display: flex;
+    justify-content: space-between;
+    color:black;
+    font-weight: bold;
+    font-family: 'Glegoo', serif;
+}
+
+.headerSpans{
+    display: flex;
+    justify-content: space-between;
 }
